Compiler_Project/rsc/tests/typecheck/valid/fsubTest.ml
let x = 2.3 in
let y = 5.6 in
let z = y-.x in
z