Compiler_Project/rsc/tests/typecheck/invalid/3if_float.ml
let x = if 3.5 then 3 else 4 in
print_int x
